# YAChip8

./: README.md  chip8.cpp  chip8.h  gui.cpp  gui.h  main.cpp  meson.build
src/: chip8.cpp  gui.h
